# chip8

./: .gitignore  CMakeLists.txt  build.bat  build_qt.bat  build_qt.sh  chip8.cpp  chip8.h
src/: chip8.cpp  chip8.h  main_qt.cpp  main_win32.cpp
